# colort

./: .gitignore  README.md  colort.py  pyproject.toml  setup.py  tox.ini
.github/workflows/: check.yaml
colort/: __init__.py  colort.py  py.typed
tests/: test_core.py
